# HPCombi

./: .gitignore  .travis.yml
benchmark/: CMakeLists.txt
data/: Bihecke2.txt  Bihecke3.txt  Bihecke4.txt  Bihecke5.txt  Bihecke6.txt  Bihecke7.txt  RenA2.txt  RenA3.txt  RenA4.txt  RenA5.txt  RenA6.txt
doc/gpuAlgo/: annexes.tex  biblio.bib  commandesImages.tex  entete.tex  glossaire.tex  gpuAlgo.tex  makefile  pageDeGarde.tex
examples/: CMakeLists.txt  Renner.cpp  RennerCpu.cpp  RennerGpu.cpp  parse_data.py  parse_data_renner.py
include/: RennerGpu.hpp  fonctions_gpu.cuh  fonctions_gpu_impl.cuh  iotools.hpp  kernels.cuh  perm16.hpp  perm16_impl.hpp  perm_generic.hpp  vector_gpu.cuh  vector_gpu_impl.cuh
src/: CMakeLists.txt  Makefile  invbench.cpp  iotools.cpp
src/gpu/: CMakeLists.txt  fonctions_gpu.cu
tests/: CMakeLists.txt
